<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item android:id="@+id/register"
        android:title="@string/register"
        app:showAsAction="never"/>

    <item android:id="@+id/signin"
        android:title="@string/login"
        app:showAsAction="never"/>

    <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        app:showAsAction="always"/>

    <item android:id="@+id/history"
        android:title="@string/history"
        android:icon="@drawable/ic_baseline_history_24"
        app:showAsAction="always"/>

</menu>